# hoverpod

./: #Main.cpp#  .gitignore  Actuator.cpp  CMakeLists.txt  Main.cpp  Motor  Motor.cpp  README.md  joystick_code.txt
.github/workflows/: cmake.yml
Actuator/: Actuator.cpp  Actuator.hpp
GUI/: GUI.cpp
HeightSensor/: HeightSensor.cpp  HeightSensor.hpp  HeightSensorTests.cpp
Hoverpod/Actuator/: Actuator.cpp  Actuator.hpp
Hoverpod/BatteryPack/: BatteryPack.cpp  BatteryPack.hpp
Hoverpod/GUI/: #GUI.glade#  GUI  GUI.cpp  GUI.glade  GUI.glade~  GUI.hpp  Orion Jr 2 BMS Notes.docx
Hoverpod/GUI/glade_tutorial/: glade_and_gtk_notes.txt  tut  tut.c  tut.glade  tut.glade~
Hoverpod/I2C/: i2c.cpp  i2c.hpp  test.cpp
Hoverpod/IMU/: DblIntegration.cpp  DoubleIntegration.cpp  IMU.cpp  IMU.hpp
Hoverpod/LandingGear/: LandingGear.cpp  LandingGear.hpp
Hoverpod/Motor/: Motor.cpp  Motor.hpp
Hoverpod/TempSensor/: TempSensor.cpp
Hoverpod/Threading/: Threading.hpp
Hoverpod/ThrustVector/: ThrustVector.cpp  ThrustVectoring.cpp  ThrustVectoring.h
IMU/: DblIntegration.cpp  IMU.cpp  IMU.hpp  IMUTests.cpp
KalmanFilter/: ErrClass.cpp  KalmanFilter.cpp  KalmanFilter.h  KalmanFilter.hpp
LandingGear/: LandingGear.cpp  LandingGear.hpp
Main/: Main.cpp  Main.hpp
Misc/I2C code for joystick/: I2C README.txt  masterReader.ino  slaveSender.ino
Motor/: Motor.cpp  Motor.hpp
Pod/: Pod.hpp
TempSensor/: TempSensor.hpp
Threading/: Threading.cpp  Threading.hpp
ThrustVector/: ThrustVector.hpp
ThrustVectoring/: TVApplication.cpp  ThrustVectoring.cpp  ThrustVectoring.h
imgui-master/: imgui.h
libs/lcdi2c/: LiquidCrystal_I2C.cpp  LiquidCrystal_I2C.h
libs/vnproglib/: CMakeLists.txt
